--- a/css/styles.css
+++ b/css/styles.css
@@ -288,6 +288,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 visibility: visible;
 }
 
+
+
 .button-close {
     position: absolute;
     top: 8px;
@@ -302,7 +304,182 @@ visibility: visible;
     height: 30px;
     width: 30px;
 }
+
+
+/*-------------------
+--Оформлення Modal--
+--------------------*/
+
+.modal-form {
+    text-align: center;
+}
+
+.form-title {
+    display: block;
+    margin-bottom: 12px;
+    font-size: 20px;
+    line-height: calc(23 / 20);
+    text-align: center;
+    color: #212121;
+}
+
+.register-group {
+    margin-bottom: 20px;
+}
+
+.modal-form-group {
+    position: relative;
+    display: block;
+}
+
+.modal-form-group:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.modal {
+    padding: 30px;
+}
+
+.modal-form-input,
+.user-comment {
+width: 100%;
+padding: 12px;
+padding-left: 39px;
+color: #000000;
+border: 1px solid rgba(33, 33, 33, 0.2);
+outline: transparent;
+
+transition: bordero-color #757575;
+}
+
+.user-comment {
+    resize: none;
+    padding: 12px 16px;
+    height: 120px;
+}
+
  
+.modal-form-label {
+    display: block;
+    padding-left: 2px;
+    margin-bottom: 4px;
+
+    text-align: left;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.01em;
+
+    font-family: Roboto;
+    font-style: Regular;
+
+    color: #757575;
+}
+
+.modal-icon {
+    position: absolute;
+    top: 29px;
+    left: 10px;
+
+    transition: color #757575;
+}
+
+.modal-form-input:hover,
+.modal-form-input:focus,
+.user-comment:hover,
+.user-comment:focus {
+    border-color: #2196F3;
+}
+
+.modal-form-input:hover + .modal-icon,
+.modal-form-input:focus + .modal-icon {
+    fill: #2196F3
+}
+
+.agreement-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 20px;
+}
+
+.agreement-text{
+    color: #757575;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+   
+    
+}
+
+.agreement-link {
+    color: #2196F3;
+}
+
+.checkbox {
+    display: flex;
+    justify-content: center;
+}
+
+.checkbox:hover,
+.checkbox:focus {
+fill: #2196F3;
+}
+
+.agreement-form-group {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    margin-right: 5px;
+}
+
+.agreement-icon-check {
+    border-radius: 2px;
+    opacity: 0;
+    position: absolute;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.agreement-check:checked+.check {
+    opacity: 1;
+    background-color: #2196F3;
+}
+
+.uncheck {
+    opacity: 1;
+}
+
+.agreement-check:checked~.uncheck {
+    opacity: 0;
+}
+
+
+
+.basic-bth {
+ display: inline-flex;
+ align-items: center;
+justify-content: center;
+padding: 10px 52px;
+margin-bottom: 20px;
+margin-top: 30px;
+
+background-color: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+
+cursor: pointer;
+border: none;
+color: #FFFFFF;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.9;
+}
+
+.basic-bth:hover,
+.basic-bth:focus {
+    background-color: #188ce8;
+}
 
 
 .section {
