--- a/css/styles.css
+++ b/css/styles.css
@@ -456,7 +456,7 @@ fill: #2196F3;
 
 
 
-.basic-bth {
+.basic-bth-link {
  display: inline-flex;
  align-items: center;
 justify-content: center;
@@ -474,13 +474,20 @@ color: #FFFFFF;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.9;
+
+
 }
 
-.basic-bth:hover,
-.basic-bth:focus {
+.basic-bth-link:hover,
+.basic-bth-link:focus {
     background-color: #188ce8;
+    
 }
-
+.basic-bth-link{
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+baground-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .section {
  padding-top: 94px;
@@ -1021,4 +1028,65 @@ transform: translateY(0);
 0px 4px 4px rgba(0, 0, 0, 0.06), 
 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+.footer-slogan {
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: #FFFFFF;
+  
+   
+}
+
+.footer-user-name {
+    width: 358px;
+    height: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+    margin-right: auto;
+
+  border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    background-color: transparent;
+   
+}
+
+.footer-user-name[placeholder] {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: calc(20 / 16);
+     letter-spacing: 0.03em;
+     
+     color: rgba(255, 255, 255, 0.6);
+}
+.footer-subscription{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 93px;
+    margin-right: 10px;
+    flex-direction: column;
+
+}
+ 
+.footer-basic-bth {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    padding: 10px 28px;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #2196F3;
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+    cursor: pointer;
+   
+
+}
+
 
